# lora-inspector-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  chartist-plugin-pointlabels.min.js  dprint.json  fly.toml  index.html  main.css  main.js
.cargo/: config.toml
.github/workflows/: deploy.yml  fly.yml  playwright.yaml  release.yml  test.yaml  wasm-bindgen-test.yaml
assets/css/: main.css
assets/js/: chartist-plugin-pointlabels.min.js  chartist.min.js  main.js  react-dom.production.min.js  worker.js
crates/inspector/: Cargo.toml  README.md  keys.json
crates/inspector/src/: file.rs  key.pest  lib.rs  metadata.rs  network.rs  norms.rs  parser.rs  statistic.rs  svd.rs  tensor.rs  tensor_test.rs  weight.rs
crates/inspector/src/snapshots/: inspector__file__tests__alpha_keys.snap  inspector__file__tests__base_names.snap  inspector__file__tests__keys_returns_correct_keys.snap
crates/lora-inspector/: Cargo.toml  README.md
crates/lora-inspector-wasm/: .gitignore  .stylelintrc.mjs  Cargo.toml  LICENSE  README.md  ava.config.ts  biome.json  global-setup.js  global-setup.mjs  global-teardown.mjs  index.html  package-lock.json  package.json  playwright.config.js  postcss.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.js  vite.config.mjs  vitest.config.ts  webdriver.json
crates/lora-inspector-wasm/assets/css/: chartist.min.css  main.css  reset.css
crates/lora-inspector-wasm/assets/js/: chartist.min.js  components.js  lib.js  main.js  main.jsx  message.js  moduleBlocks.js  react.production.min.js  test-setup.ts  worker-test.js  worker.js  workers.js
crates/lora-inspector-wasm/assets/js/components/: index.js
crates/lora-inspector-wasm/assets/js/components/analysis/: Advanced.jsx  AllKeys.jsx  BaseNames.jsx  Blocks.jsx  EffectiveRank.jsx  Precision.jsx  Progress.jsx  StatisticRow.jsx  Statistics.jsx  TextEncoderKeys.jsx  UnetKeys.jsx  Weight.jsx
crates/lora-inspector-wasm/assets/js/components/architecture/: Attention.jsx  MultiLayerPerception.jsx  Sampler.jsx
crates/lora-inspector-wasm/assets/js/components/dataset/: BucketInfo.jsx  Buckets.jsx  CaptionDropout.jsx  CaptionSettings.jsx  Dataset.jsx  Subset.jsx  TagFrequency.jsx
crates/lora-inspector-wasm/assets/js/components/layout/: CompareMetadata.jsx  Header.jsx  Headline.jsx  Main.jsx  Metadata.jsx  NoMetadata.jsx  Raw.jsx  Section.jsx  SectionNav.jsx  Support.jsx
crates/lora-inspector-wasm/assets/js/components/metadata/: ModelSpec.jsx  PretrainedModel.jsx  VAE.jsx
crates/lora-inspector-wasm/assets/js/components/network/: BOFTNetwork.jsx  DiagOFTNetwork.jsx  LoKrNetwork.jsx  LoRANetwork.jsx  Network.jsx  NetworkUtils.js
crates/lora-inspector-wasm/assets/js/components/training/: Batch.jsx  EpochStep.jsx  Experimental.jsx  FluxTraining.jsx  LRScheduler.jsx  Loss.jsx  MultiresNoise.jsx  Noise.jsx  Optimizer.jsx  WaveletLoss.jsx  WaveletLossWeights.jsx
crates/lora-inspector-wasm/assets/js/components/ui/: MetaAttribute.jsx  SVGComponents.jsx
crates/lora-inspector-wasm/e2e-tests/: index.spec.js
crates/lora-inspector-wasm/public/assets/js-lib/: chartist-plugin-pointlabels.min.js  chartist.min.js
crates/lora-inspector-wasm/src/: lib.rs  worker.rs
crates/lora-inspector-wasm/tests/: compare-metadata.test.jsx  component-business-logic.test.js  component-logic.test.js  component-rendering.test.js  components.test.js  dataset-analysis-components.test.jsx  index.spec.js  integration.test.js  jsx-components.test.jsx  meta-attribute.test.jsx  metadata-validation.test.js  moduleBlocks.test.js  network-components.test.jsx  parseFluxTransformer.js  parsePEFTFlux.js  parseSDXL.js  progress-component.test.jsx  section-nav.test.jsx  simple-component-tests.test.jsx  test-utils.jsx  training-components.test.jsx  worker-patterns.test.js  worker.js
crates/lora-inspector-wasm/tests/fixtures/: boo-metadata.js
crates/lora-inspector/src/: main.rs
docs/plans/: 2026-03-30-rank-metrics-impl.md
src/: file.rs  inspector.rs  key.pest  lib.rs  lr_weight.pest  main.rs  metadata.rs  network.rs  norms.rs  statistic.rs  weight.rs  worker.rs
src/snapshots/: lora_inspector__tests__map_down_alpha.snap  lora_inspector__tests__sdxl_weights_by_block.snap  lora_inspector__tests__weights_by_block.snap  lora_inspector_rs__file__tests__alpha_keys.snap  lora_inspector_rs__file__tests__base_names.snap  lora_inspector_rs__file__tests__keys_returns_correct_keys.snap  lora_inspector_rs__tests__map_down_alpha.snap  lora_inspector_rs__tests__sdxl_weights_by_block.snap  lora_inspector_rs__tests__sdxl_weights_by_block.snap.new  lora_inspector_rs__tests__weights_by_block.snap  lora_inspector_rs__tests__weights_by_block.snap.new
