[package]
name = "lora-inspector-rs"
version = "0.1.0"
edition = "2021"

[profile.dev.package]
insta.opt-level = 3

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
safetensors = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_with = "3.4.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.2" }
candle-core = { path = "/home/rockerboo/code/others/candle/candle-core", version = "0.3.2" }
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.108"
num = "0.4.1"
# web-sys = { version = "0.3.65", features = ["console"] }

[dependencies.web-sys]
version = "0.3.65"
features = [
    'console',
    # 'Document',
    # 'HtmlElement',
    # 'HtmlInputElement',
    # 'FileList',
    # 'File',
    # 'Blob',
    # 'FileReader',
    # 'MessageEvent',
    # 'ProgressEvent',
    # 'MessagePort',
    # 'Window',
    # 'Worker',
    # 'SharedWorker',
    # 'WorkerOptions',
    # 'RequestCredentials'
]  

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
insta = { version = "1.34.0", features = ["json"] }
memmap2 = "0.9.0"

[profile.release]
lto = true
opt-level = 's'


