[package]
name = "inspector"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
candle-core = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
num = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"

[dev-dependencies]
insta = { version = "1.34.0", features = ["json"] }
memmap2 = "0.9.0"

[dependencies.web-sys]
version = "0.3.65"
features = [
  'console',
]
