[package]
name = "lora-inspector-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
candle-core = { workspace = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
inspector = { path = "../inspector" }
safetensors = { workspace = true }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.108"
serde_with = "3.4.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.65"
features = [
  'console',
]

[dev-dependencies]
insta = { version = "1.34.0", features = ["json"] }
memmap2 = "0.9.0"
wasm-bindgen-futures = "0.4.39"
wasm-bindgen-test = "0.3.13"

[dev-dependencies.web-sys]
version = "0.3.65"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Worker',
  'Blob',
  'Performance',
  'Window',
]

