[package]
name = "lora-inspector"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inspector = { path = "../inspector" }
candle-core = { workspace = true, features = [] }
clap = { version = "4.5.37", features = ["derive"] }
serde.workspace = true
serde_json = "1.0.140"
indicatif = "0.17.11"

[features]
cuda = ["candle-core/cuda"]
